--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <img src="https://via.placeholder.com/150x150?text=自治区人民医院Logo" alt="自治区人民医院 Logo" class="logo">
-        <h1 style="text-align: center;">MM数智小工具-1分期</h1>
+    <div class="container home">
+        <div class="logo-container">
+            <img src="https://via.placeholder.com/150x150?text=自治区人民医院Logo" alt="自治区人民医院 Logo" class="logo">
+        </div>
+        <h1>MM数智小工具-1分期</h1>
         <button id="startAssessment" class="start-button">开始评估</button>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        document.getElementById('startAssessment').addEventListener('click', function() {
+            window.location.href = 'test.html';
+        });
+    </script>
 </body>
 </html>
