--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <div class="container home">
-        <div class="logo-container">
-            <img src="https://via.placeholder.com/150x150?text=自治区人民医院Logo" alt="自治区人民医院 Logo" class="logo">
+        <div class="header">
+            <div class="logo-container">
+                <img src="https://via.placeholder.com/150x150?text=自治区人民医院Logo" alt="自治区人民医院 Logo" class="logo">
+            </div>
+            <h1>MM数智小工具-1分期</h1>
         </div>
-        <h1>MM数智小工具-1分期</h1>
-        <button id="startAssessment" class="start-button">开始评估</button>
+        <div class="content">
+            <button id="startAssessment" class="start-button">开始评估</button>
+        </div>
     </div>
 
     <script>
