--- a/result.html
+++ b/result.html
@@ -14,6 +14,6 @@
         <button id="backToHome" class="back-button">返回首页</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="result-script.js"></script>
 </body>
 </html>
